--- a/WebApi/index.html
+++ b/WebApi/index.html
@@ -133,6 +133,10 @@
         .group ul li {
             list-style:none;
         }
+
+        .group.selected-group {
+            background-color:rgba(0, 0, 0, 0.1) !important;
+        }
         .group.selected-group ul {
             height:200px;
         }
